--- a/wercker.yml
+++ b/wercker.yml
@@ -26,6 +26,12 @@ build:
     # at the right place in the workspace tree
     - setup-go-workspace
 
+    # nkf install
+    - script:
+      name: nkf install
+      code: |
+        cd /tmp && wget http://jaist.dl.sourceforge.jp/nkf/59912/nkf-2.1.3.tar.gz && tar zxvf nkf-2.1.3.tar.gz && cd nkf-2.1.3/ && make && make install
+
     # Gets the dependencies
     - script:
         name: go get
