エラー修正

--- a/wercker.yml
+++ b/wercker.yml
@@ -42,10 +42,10 @@ build:
     - script:
         name: go build
         code: |
-          go build ./...
+          GO111MODULE=on go build ./...
 
     # Test the project
     - script:
         name: go test
         code: |
-          go test ./...
+          GO111MODULE=on go test ./...
