--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,22 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Go 1.12
-      uses: actions/setup-go@v1
+    - uses: actions/checkout@v5
+    - uses: actions/setup-go@v6
       with:
-        go-version: 1.12
-      id: go
-
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
+        go-version-file: go.mod
 
     - name: Get dependencies
       run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
+        go mod tidy
+        go vet ./...
 
     - name: Build
       run: go build -v .
